fix post spacing

--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,8 @@ body {
         color: #828282;
 
         .post {
-            margin: .5em;
+            padding: .5em;
+            margin: 0 .5em;
 
             div {
                 &:nth-child(1) {
@@ -56,9 +57,6 @@ body {
                 a {
                     color: black;
                 }
-            }
-            + .post {
-                margin-top: 0;
             }
         }
     }
